--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/prime-rib.html">Prime Rib</a>
+        <ul>
+            <li><a href="./recipes/prime-rib.html">Prime Rib</a></li>
+            <li><a href="./recipes/marry-me-chicken.html">Marry Me Chicken</a></li>
+            <li><a href="./recipes/brown-butter-caramel-chai-cookies.html">Brown Butter Caramel Chai Cookies</a></li>
+        </ul>
     </body>
 </html>
