Prime Rib changes

--- a/recipes/prime-rib/prime-rib.html
+++ b/recipes/prime-rib/prime-rib.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Prime Rib Recipe</title>
+        <link rel="stylesheet" href="prime-styles.css">
     </head>
     <body>
-            <a href="../index.html">Home</a>
+        <a href="/index.html">Home</a>
         <h1>Prime Rib</h1>
             <img src="https://www.allrecipes.com/thmb/MBp2dzI8UFfBTL7lgky1vrQs39U=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7520305_Chef-Johns-Perfect-Prime-Rib-4x3-1-2000-d30c72906aee425d95167536be617b35.jpg" alt="Delicius Prime Rib" height="300" width="300">
-        <h2>Description</h2>
-            <p>Prime rib is an extremely tender, unbelievably juicy cut of beef with a bold flavor that needs no dressing up. In fact, cooking prime rib is one of the easiest things you can do in the kitchen.</p>
-        <h3>Ingredients</h3>
+        <div class="recipe">
+            <h2>Description</h2>
+            <p class="description">Prime rib is an extremely tender, unbelievably juicy cut of beef with a bold flavor that needs no dressing up. In fact, cooking prime rib is one of the easiest things you can do in the kitchen.</p>
+            <h3>Ingredients</h3>
             <ul>
                 <li>4 lb. prime rib roast</li>
                 <li>¼ cup unsalted butter, softened</li>
@@ -18,18 +20,19 @@
                 <li>1 teaspoon herbes de Provence</li>
                 <li>kosher salt</li>
             </ul>
-        <h3>Steps</h3>
+            <h3>Steps</h3>
             <ol>
-                <strong><li>Bring the rib roast to room temperature.</li></strong>
+                <strong><li>Bring the rib roast to room temperature:</li></strong>
                     <p>Place the rib roast in a roasting pan and allow it to come to temperature for at least four hours. This will ensure it cooks more evenly.</p>
-                <strong><li>Preheat oven.</li></strong>
+                <strong><li>Preheat oven:</li></strong>
                     <p>Preheat an oven to 500 degrees F (260 degrees C).</p>
-                <strong><li>Season.</li></strong>
+                <strong><li>Season:</li></strong>
                     <p>Combine butter, pepper, and herbes de Provence in a bowl and then mix until well blended. Spread butter mixture evenly over entire roast. Season roast generously with kosher salt.</p>
-                <strong><li>Roast.</li></strong>
+                <strong><li>Roast:</li></strong>
                     <p>Roast the 4-pound prime rib in the preheated oven for 20 minutes.</p>
-                <strong><li>Let it rest.</li></strong>
+                <strong><li>Let it rest:</li></strong>
                     <p>Turn the oven off and leave the roast in the oven with the door closed. Let the roast sit in the oven for two hours. The roast will continue to cook during this time. Once two hours are up, remove roast from the oven, slice, and serve.</p>
             </ol>
+        </div>
     </body>
 </html>
