--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/prime-rib.html">Prime Rib</a></li>
-            <li><a href="./recipes/marry-me-chicken.html">Marry Me Chicken</a></li>
-            <li><a href="./recipes/brown-butter-caramel-chai-cookies.html">Brown Butter Caramel Chai Cookies</a></li>
+            <li><a href="./recipes/prime-rib/prime-rib.html">Prime Rib</a></li>
+            <li><a href="./recipes/marry-me-chicken/marry-me-chicken.html">Marry Me Chicken</a></li>
+            <li><a href="./recipes/brown-butter-caramel-chai-cookies/brown-butter-caramel-chai-cookies.html">Brown Butter Caramel Chai Cookies</a></li>
         </ul>
     </body>
 </html>
