Final CSS Changes

--- a/recipes/brown-butter-caramel-chai-cookies/brown-butter-caramel-chai-cookies.html
+++ b/recipes/brown-butter-caramel-chai-cookies/brown-butter-caramel-chai-cookies.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Brown Butter Caramel Chai Cookies Recipe</title>
+        <link rel="stylesheet" href="brown-styles.css">
     </head>
     <body>
-            <a href="../index.html">Home</a>
+            <a href="/index.html">Home</a>
         <h1>Brown Butter Caramel Chai Cookies</h1>
             <img src="https://www.allrecipes.com/thmb/njusiLfUnIaNJZ45RS0p8-iw3cM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/8384211_Brown-Butter-Caramel-Chai-Cookies_Kim_4x3-eed9c4382edb42dca41e5213f4701322.jpg" alt="Delicius Cookies" height="300" width="300">
         <h2>Description</h2>
