--- a/recipes/marry-me-chicken/marry-me-chicken.html
+++ b/recipes/marry-me-chicken/marry-me-chicken.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Marry Me Chicken Recipe</title>
+        <link rel="stylesheet" href="marry-styles.css">
     </head>
     <body>
-            <a href="../index.html">Home</a>
+            <a href="/index.html">Home</a>
         <h1>Marry Me Chicken</h1>
             <img src="https://www.allrecipes.com/thmb/KmfqGG8X3sX7sndwQZ1TDZCIVUw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/275590marry-me-chickenfabeverydaynew4x3-d15882b815144e208c3891a651bb74fd.jpeg" alt="Delicius Chicken" height="300" width="300">
         <h2>Description</h2>
